# test

./: .gitignore  V0.0.1-TECHNICAL.md  V1.0-TECHNICAL.md  _run_server.py  build_kb.py  config.py  install_service.ps1  mcp_server.py  opencode.jsonc  pyproject.toml  query  requirements.txt  start_chroma_server.bat
chroma_db/: chroma.sqlite3
chroma_db/5bb4f2e9-7b82-4781-aaf1-1f4d543fa7a3/: index_metadata.pickle
docs/: bug-report-hnsw-persistence.md  github-issue-hnsw-bug.md  qwen3_intro.txt  机器学习第六次作业实验报告.docx  陈熙楷-20232633016_机器学习第5次作业.docx
docs/mcp数据/: 潘越.txt
docs/mcp数据/learn/: architecture.md  server-concepts.md  versioning.md
tests/: test_step1_setup.py  test_step2_verify.py  test_step3_workaround.py
