[project]
name = "qwen-embedding"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "chromadb>=1.5.9",
    "fastapi>=0.136.1",
    "httpx>=0.28.1",
    "mcp>=1.27.1",
    "openai>=2.36.0",
    "pypdf>=6.11.0",
    "python-docx>=1.2.0",
    "uvicorn>=0.46.0",
]
